# BT_Programmer

./: .gitignore  CMakeLists.txt  i686-w64-mingw32.cmake  mingw_compat.h
.github/workflows/: build-exe.yml
DemoSDK_C/: DemoSDK_C.cpp  DemoSDK_C.vcproj  ReadMe.txt  stdafx.cpp
demo/: DemoForSDK.cpp  DemoForSDK.rc  DemoForSDK.vcproj  ReadMe.txt  resource.h  stdafx.h
demo/lib/: Controller.def  Controller.h  Controller.lib  ControllerD.lib  ScriptEx.h
lib/: API Manual 1.2.doc  Controller.h
